--- a/public/css/product.css
+++ b/public/css/product.css
@@ -32,18 +32,21 @@
   margin: 1rem 0;
 }
 .form-control label,
-.form-control input{
+.form-control input,
+.form-control textarea{
   display: block;
   width: 100%;
 }
-.form-control input{
+.form-control input,
+.form-control textarea{
   border: 1px solid #333333;
   background-color: #333333;
   color: #eeeeee;
   font: inherit;
   outline: none;
 }
-.form-control input:focus{
+.form-control input:focus,
+.form-control textarea:focus{
   border: 1px solid #333333;
   background-color: #333333;
   color: #eeeeee;
