--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -6,7 +6,19 @@
           <div class="form-control">
             <label for='title'>Title</label>
             <input type="text" name="title" id='title'>
-          </div>  
+          </div>
+          <div class="form-control">
+            <label for='imageUrl'>Image URL</label>
+            <input type="text" name="imageUrl" id='imageUrl'>
+          </div>
+          <div class="form-control">
+            <label for='price'>Price</label>
+            <input type="number" name="price" id='price' step='0.01'>
+          </div> 
+          <div class="form-control">
+            <label for='description'>Description</label>
+            <textarea rows='5' name="description" id='description'></textarea>
+          </div> 
             <button type="submit">Add Product</button>
         </form>
     </main>
