--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -3,5 +3,9 @@
 
 <body>
   <%- include('../includes/navigation.ejs') %>
-
+  <main>
+    <h1>
+      Empty
+    </h1>
+  </main>    
   <%- include('../includes/end.ejs') %>
