--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,12 @@ main {
 form {
   display: inline;
 }
+.centered {
+  text-align: center;
+}
+.centered > div > img {
+  width: 400px;
+}
 .main-header{
   width: 100%;
   height: 3.5rem;
