--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -18,7 +18,8 @@
           <div class="form-control">
             <label for='description'>Description</label>
             <textarea rows='5' name="description" id='description'></textarea>
-          </div> 
+          </div>
+          <!-- <input type="hidden" name="id" value='<%= null %>'>  -->
             <button type="submit">Add Product</button>
         </form>
     </main>
