--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,7 +21,7 @@
                     <p class="product__description"><%= product.description %></p>
                 </div>
                 <div class="card__actions">
-                    <button href='/admin/edit-product' class="btn">Edit</button>
+                    <a class='btn' href='/admin/edit-product/<%= product.id %>?edit=true' class="btn">Edit</a>
                     <form action='/admin/delete-product' method="POST">
                       <button type='submit' class="btn">Delete</button>
                     </form>
