--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,9 +21,9 @@
                     <p class="product__description"><%= product.description %></p>
                 </div>
                 <div class="card__actions">
-                    <a class='btn' href='/admin/edit-product/<%= product.id %>?edit=true' class="btn">Edit</a>
+                    <a class='btn' href='/admin/edit-product/<%= product._id %>?edit=true' class="btn">Edit</a>
                     <form action='/admin/delete-product' method="POST">
-                      <input type='hidden' value='<%= product.id %>' name='productId'/>
+                      <input type='hidden' value='<%= product._id %>' name='productId'/>
                       <button type='submit' class="btn">Delete</button>
                     </form>
                 </div>
