--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,7 +35,7 @@ form {
 .main-header__nav{
   height: 100%;
   width: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
 }
