--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,6 +11,7 @@
             <label for='password'>Image URL</label>
             <input type="password" name="password" id='password'>
           </div>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
           <button type="submit">Login</button>
         </form>
     </main>
