--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -20,6 +20,7 @@
             <textarea rows='5' name="description" id='description'></textarea>
           </div>
           <!-- <input type="hidden" name="id" value='<%= null %>'>  -->
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
             <button type="submit">Add Product</button>
         </form>
     </main>
