--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -20,6 +20,7 @@
             <textarea rows='5' name="description" id='description'><%= product.description %></textarea>
           </div> 
           <input type="hidden" name="productId" value='<%= product._id %>'>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
             <button type="submit">Edit Product</button>
         </form>
     </main>
