--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,7 +11,7 @@
             <input type="email" name="email" id='email'>
           </div>
           <div class="form-control">
-            <label for='password'>Password</label>
+            <label for='password'>Image URL</label>
             <input type="password" name="password" id='password'>
           </div>
           <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
