--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -19,7 +19,7 @@
           <div class="form-control">
             <label for='password'>Password</label>
             <input 
-              class="<%= validationErrors.find(e => e.param === 'email') && 'invalid' %>"  
+              class="<%= validationErrors.find(e => e.param === 'password') && 'invalid' %>"  
               type="password" 
               name="password" 
               id='password'
