Removed the use of add-product view, using only edit-product view, done sanitization

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -50,7 +50,8 @@
   color: #eeeeee;
   font: inherit;
 }
-.form-control .invalid {
+.form-control input.invalid,
+.form-control textarea.invalid {
   color: lightcoral;
 }
 
