--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -22,11 +22,9 @@
                 </div>
                 <div class="card__actions">
                     <a class='btn' href='/admin/edit-product/<%= product._id %>?edit=true' class="btn">Edit</a>
-                    <form action='/admin/delete-product' method="POST">
                       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                       <input type='hidden' value='<%= product._id %>' name='productId'/>
-                      <button type='submit' class="btn">Delete</button>
-                    </form>
+                      <button type='button' class="btn" onclick="deleteProduct(this)">Delete</button>
                 </div>
             </article>
           <% } %>  
@@ -36,3 +34,4 @@
       <% } %>
   </main>
   <%- include('../includes/end.ejs') %>
+  <script src="/js/admin.js"></script>
